versioned_docs/version-2.10.0/core/launchers.md
# Launchers

A launcher is a program that can be used to launch a game or application.
Each [platform](../platforms/index.md) has its own set of launchers, which are used to launch the correct program for the given [system](../systems.md) and file.

## Custom Launchers

Custom launchers are a type of user-defined launcher that can be created and configured using a [TOML](https://toml.io/) file, similar to the [Mapping Files](./mappings.md#mapping-files). For example, if a [platform](../platforms/index.md) you're using Zaparoo on does not support an emulator you use, you can most likely create a custom launcher for it and integrate it into [Zaparoo Core](./index.md) like an officially supported one.

Custom launchers aren't as configurable or advanced as official launchers, they're designed for simple cases where it's possible to launch media by giving a file path to the media player.

:::note Media Tracking Limitations
Custom launchers cannot accurately track what media is playing, which means:
- They won't automatically stop when a [token](../tokens/index.md) is removed in hold mode
- The stop command via the API won't work with custom launchers
- Core can't determine if media launched by a custom launcher is still running

Generally this isn't a big deal, and you can get a long way with just this feature.
:::

### Creating a custom launcher

To start, open up the `launchers` directory in the Core data folder. Check the page for your [platform](../platforms/index.md) to see where this folder will be if you're not sure.

Create a new file ending in `.toml`. We'll call our example `OpenEmuGB.toml`. The name isn't too important, though if there are multiple launchers defined with the same ID, the one that was read first will take precedence.

Open the file, and we'll add the following example data:

```toml
[[launchers.custom]]
id = "OpenEmuGB"
system = "Gameboy"
media_dirs = ["/Volumes/games/Gameboy"]
file_exts = [".gb"]
execute = "osascript -e 'tell application \"OpenEmu\" to open POSIX file \"[[media_path]]\"'"
```

The first line, `[[launchers.custom]]`, tells Core this is a custom launcher definition. It's required. Make sure to include the double square brackets.

The `id` line defines the internal ID of the launcher. Generally this won't matter, but you can reference it with the `?launcher=<launcher id>` advanced argument in [ZapScript](../zapscript/index.md). It's also possible to override an existing official launcher.

The `system` line specifies which system this launcher will belong to.

The `media_dirs` line specifies a list of directories where Core should search for media. It can also be a relative path, in which case during media indexing it will be appended to the platform's list of root folders. This definition is also used to match a file to the launcher during scans.

The `file_exts` line is a list of file extensions which will match to this launcher. Extensions are automatically normalized - you can write `".gb"` or `"gb"` and both will work (a `.` prefix is added if missing and extensions are converted to lowercase).

The `execute` line is the command which will be run when a token is scanned which matches to this launcher. Expression variables are replaced by their values, then the resulting string is split into a program and arguments (respecting double and single quoted strings) and executed directly without a shell interpreter. If you need shell features like pipes or redirection, create a wrapper script and reference it here instead.

#### Available Expression Variables

You can use the following variables in your execute command:

| Variable | Description |
|----------|-------------|
| `[[media_path]]` | Resolved absolute path to the media file |
| `[[platform]]` | Platform ID (e.g., "linux", "windows", "mister") |
| `[[version]]` | Zaparoo Core version |
| `[[device.hostname]]` | Device hostname |
| `[[device.os]]` | Operating system ("linux", "windows", "darwin") |
| `[[device.arch]]` | System architecture ("amd64", "arm64", etc.) |
| `[[action]]` | Launch action from [launcher defaults](./config.md#launchersdefault) or ZapScript advanced args |
| `[[install_dir]]` | Install directory from [launcher defaults](./config.md#launchersdefault) |
| `[[server_url]]` | Server URL from [launcher defaults](./config.md#launchersdefault) |
| `[[system_id]]` | System ID the launcher belongs to |
| `[[launcher_id]]` | The launcher's ID |

#### Environment Variable

Custom launcher commands also receive a `ZAPAROO_ENVIRONMENT` environment variable containing a JSON object with the same data as the expression variables. This allows shell scripts to access the full context.

Save this file, restart Zaparoo Core, and then run a media database update. You should see all the media detected for this launcher and launchable when scanned!

### Advanced Options

#### groups

Associate the launcher with one or more groups. Groups allow you to set defaults for multiple launchers at once using `[[launchers.default]]` in config.toml.

```toml
[[launchers.custom]]
id = "MyKodiVideo"
system = "Video"
groups = ["Kodi"]
# ...
```

```toml title="config.toml"
[[launchers.default]]
launcher = "Kodi"
server_url = "http://kodi:8080"
```

The defaults lookup checks both the launcher ID and any groups it belongs to.

#### schemes

Define URL schemes the launcher handles. This allows the launcher to be matched when launching URLs with that scheme.

```toml
[[launchers.custom]]
id = "MyPlayer"
schemes = ["myplayer://"]
# ...
```

#### lifecycle

Control how the launcher process is managed:

- `"blocking"` (default) - Core waits for the process and tracks it
- `"background"` - Fire and forget, Core doesn't track the process

```toml
[[launchers.custom]]
id = "BackgroundPlayer"
lifecycle = "background"
# ...
```

#### controls

Define control actions that can be triggered on active media via the [`media.control`](./api/methods.md#mediacontrol) API method. Values are [ZapScript](../zapscript/index.md) strings that run in a restricted control runtime — media-launching and playlist commands are blocked, but utility commands like `input.keyboard`, `execute`, `delay` and `echo` are allowed.

The `execute` command in control scripts bypasses the [`allow_execute`](./config.md#allow_execute) allowlist, since control actions are defined by the device owner in configuration files.

```toml
[[launchers.custom]]
id = "RetroArchSNES"
system = "SNES"
execute = "retroarch -L snes \"[[media_path]]\""
media_dirs = ["/games/snes"]
file_exts = [".sfc", ".smc"]

[launchers.custom.controls]
save_state = "**input.keyboard:{f2}"
load_state = "**input.keyboard:{f4}"
toggle_menu = "**input.keyboard:{f1}"
toggle_pause = "**input.keyboard:{p}"
```

Available control actions are reported in the `launcherControls` field of the active media object. Scripts are validated when the launcher loads — entries with invalid ZapScript syntax are skipped with a warning in the logs.

#### restricted

When set to `true`, only files matching the `allow_file` patterns in config.toml can be launched. Useful for security-sensitive launchers.

```toml
[[launchers.custom]]
id = "ScriptRunner"
restricted = true
# ...
```

### More Examples

#### Windows Emulator

```toml
[[launchers.custom]]
id = "WindowsEmulator"
system = "Windows"
media_dirs = ["C:/Games"]
file_exts = [".exe"]
execute = "start \"\" \"[[media_path]]\""
```

#### Platform-Aware Launcher

This example uses expression variables to adapt behavior based on the platform:

```toml
[[launchers.custom]]
id = "PlatformAware"
system = "Multi"
media_dirs = ["games"]
file_exts = [".rom"]
execute = "/opt/launchers/[[platform]]/run.sh \"[[media_path]]\" --host [[device.hostname]]"
```

### Troubleshooting

#### Verifying Your Launcher Loaded

Check the Zaparoo Core logs when it starts up. You should see messages like:
- `found X custom launcher files`
- `loaded X files, Y custom launchers`

If your launcher isn't loading, check for TOML syntax errors in the logs.

#### Testing Commands

Before adding a command to your launcher config, test it manually in your terminal/command prompt. Replace `[[media_path]]` with an actual file path to verify it works.

#### Common Issues

- **Paths with spaces**: Make sure to properly quote paths in your execute command, especially on Windows
- **Launcher precedence**: If multiple launchers match the same files, the first one loaded takes precedence
- **File not found**: Ensure your `media_dirs` paths are absolute or correctly relative to the platform's root folders
- **Command not found**: Verify the programs you're calling in `execute` are installed and in your system's PATH

